--- a/src/real-DOM.html
+++ b/src/real-DOM.html
@@ -7,18 +7,18 @@
 
 <body>
 
-<h1>Example of Actual DOM Rendering</h1>
+<h1>Example of Actual/Real DOM Rendering</h1>
 
-<div id="displayTime">My first paragraph.</div>
+<div id="root">My first paragraph.</div>
 
 <script>
     function updateTime() {
         var element = '<h1>Hello World!</h1>';
         element += '<h1>Now the time is</h1>';
         element += '<p>' + new Date().toLocaleTimeString() + '</p>';
-        document.getElementById('displayTime').innerHTML = element; 
+        document.getElementById('root').innerHTML = element;
     }
-    // calls the function updateTime in every 3 seconds (3000 milliseconds):
+    // calls the function updateTime in every 2 seconds (2000 milliseconds):
     window.setInterval(updateTime, 2000);
 </script>
 
